bonus/argocd/ingress-argocd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/spec.ingressClassName: traefik
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.entrypoints: "web"
    # traefik.ingress.kubernetes.io/service.serversscheme: "https"
    # traefik.ingress.kubernetes.io/service.serverstransport: "insecure@kubernetescrd"
spec:
  rules:
  - host: argocd-server.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 80
